added xlsx talk

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,5 +1,5 @@
-%h1 Data Tables
+%h1 Axlsx
 
-= link_to 'Add a User', new_user_path
-= link_to 'List of Users', users_path
+=# link_to 'Add a User', new_user_path
+=# link_to 'List of Users', users_path
 = link_to 'Presentation', '/presentation'
