--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,9 +1,8 @@
 %html
   %head
-    %title DatatablesTalk
+    %title Axlsx Talk
     = stylesheet_link_tag    "application", "bootstrap.min", "bootstrap-responsive.min", "jquery.dataTables_themeroller", "bootstrap", "bootstrap-responsive", "jquery.dataTables", params[:controller]
     = stylesheet_link_tag "impress" if params[:action] == "presentation"
-    = javascript_include_tag "application", "bootstrap", "bootstrap.min", "jquery", "jquery.dataTables", "jquery.dataTables.min"
     = javascript_include_tag "impress" if params[:action] == "presentation"
     = csrf_meta_tags
   %body
