--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,6 +1,6 @@
 %html
   %head
-    %title Axlsx Talk
+    %title Axlsx Exploring
     = stylesheet_link_tag    "application", "bootstrap.min", "bootstrap-responsive.min", "jquery.dataTables_themeroller", "bootstrap", "bootstrap-responsive", "jquery.dataTables", params[:controller]
     = stylesheet_link_tag "impress" if params[:action] == "presentation"
     = javascript_include_tag "impress" if params[:action] == "presentation"
