updated slide content

--- a/app/views/home/presentation.html.haml
+++ b/app/views/home/presentation.html.haml
@@ -158,7 +158,7 @@
           end
     .step.slide{"data-x" => "10000", "data-y" => "-1500"}
       %q
-        %b Data tyeps format
+        %b Data types format
         %pre
           date_format = wb.styles.add_style :format_code => 'YYYY-MM-DD'
           time_format = wb.styles.add_style :format_code => 'hh:mm:ss'
